Сделал окно паузы по нажатию на escape

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
       </div>
     </div>
   </div>
+  <div class="pause-popup">
+    <div class="pause-popup__content">
+      <button class="pause-popup__btn btn-continue">Продолжить</button>
+      <button class="pause-popup__btn btn-retry">Заного</button>
+      <button class="pause-popup__btn btn-exit">Выйти</button>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script type="module" src="src/main.js"></script>
