Доработал функционал паузы, реализовал метод отрисовки нот под музыку, добавил тестовые ноты

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="start-popup__icon">🎧</div>
         <div class="start-popup__title">Добро пожаловать!</div>
         <div class="start-popup__text">
-          Так как это ритм игра, рекомендуется подключить проводные наушники для того чтобы минимизировать задержки
+          Так как это ритм игра, рекомендуется подключить проводные наушники.
         </div>
         <button class="start-popup__btn">Начать!</button>
       </div>
