--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
     </div>
   </div>
 
+  <div class="fale-popup">
+    <div class="fale-popup__content">
+      <div class="fale-popup__content-title">Вы сфейлили =(</div>
+      <button class="fale-popup__btn fale-popup-retry">Начать заного</button>
+      <button class="fale-popup__btn fale-popup-exit">Выйти</button>
+    </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script type="module" src="src/main.js"></script>
 </body>
