--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap" rel="stylesheet">
+  <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> 
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
@@ -22,6 +23,7 @@
         <button class="start-popup__btn">Начать!</button>
       </div>
     </div>
+
   </div>
   <div class="pause-popup">
     <div class="pause-popup__content">
